# coverletter-rs

./: Cargo.toml  README.md
src/: builder.rs  config.rs  helpers.rs  lib.rs  main.rs
src/builders/: coverletter.rs  mod.rs  resume.rs  utils.rs
src/commands/: config.rs  cover.rs  mod.rs  resume.rs
