[package]
name = "coverletter"
version = "0.1.4"
edition = "2021"
authors = ["Annie Ehler <annie.ehler.4@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to help you find a job"
readme = "README.md"
homepage = "https://github.com/annie444/coverletter"
repository = "https://github.com/annie444/coverletter"
keywords = ["cli", "employment", "pdf", "help", "resume"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31" }
clap = { version = "4.4.6", features = ["cargo", "env", "string", "unicode", "color"] }
dotenvy = "0.15.7"
genpdf = { version = "0.2.0", features = ["hyphenation", "image", "images"] }
home = "0.5.5"
image = "0.23.14"
include_dir = "0.7.3" 
pdfshrink = "0.2.0"
tempfile = "3.8.0"
